--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "backend prototype",
+  "name": "es6-express-rest-api",
   "version": "0.0.1",
-  "description": "backendPrototype",
+  "description": "es6-express-rest-api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/white87332/es6-express-rest-api.git"
   },
   "author": "Tony Jiang",
   "license": "MIT",
