--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.7.1",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "socket.io": "^1.3.7"
   }
 }
