--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "babel": "^5.8.34",
     "body-parser": "^1.14.2",
+    "bunyan": "^1.5.1",
     "compression": "^1.6.0",
     "cors": "^2.7.1",
     "express": "^4.13.3",
