--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "Tony Jiang",
   "license": "MIT",
   "dependencies": {
-    "babel": "^5.8.34",
+    "babel-core": "^6.3.26",
+    "babel-preset-es2015": "^6.3.13",
     "body-parser": "^1.14.2",
     "bunyan": "^1.5.1",
     "compression": "^1.6.0",
