--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Tony Jiang",
   "license": "MIT",
   "dependencies": {
+    "async": "^1.5.2",
     "babel-core": "^6.4.0",
     "babel-preset-es2015": "^6.3.13",
     "body-parser": "^1.14.2",
