--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
   "license": "MIT",
   "dependencies": {
     "async": "^1.5.2",
-    "babel-core": "^6.4.0",
-    "babel-preset-es2015": "^6.3.13",
     "body-parser": "^1.14.2",
     "bunyan": "^1.5.1",
     "compression": "^1.6.0",
@@ -24,5 +22,9 @@
     "express-session": "^1.13.0",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.4.4"
+  },
+  "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-preset-es2015": "^6.3.13"
   }
 }
