--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.13.0",
     "kerberos": "0.0.18",
     "mongodb": "^2.1.4",
+    "node-uuid": "^1.4.7",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.4.4"
   },
