--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
   "dependencies": {
     "async": "^1.5.2",
     "body-parser": "^1.14.2",
-    "bunyan": "^1.5.1",
     "compression": "^1.6.1",
     "cors": "^2.7.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "kerberos": "0.0.18",
+    "moment": "^2.11.1",
     "mongodb": "^2.1.4",
     "node-uuid": "^1.4.7",
     "serve-favicon": "^2.3.0",
-    "socket.io": "^1.4.4"
+    "socket.io": "^1.4.4",
+    "winston": "^2.1.1",
+    "winston-daily-rotate-file": "^1.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.4.5",
