--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "async": "^1.5.2",
     "body-parser": "^1.14.2",
     "compression": "^1.6.1",
+    "connect-multiparty": "^2.0.0",
     "cors": "^2.7.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
