--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "MIT",
   "dependencies": {
     "async": "^1.5.2",
+    "babel-core": "^6.5.2",
+    "babel-preset-es2015": "^6.5.0",
     "body-parser": "^1.15.0",
     "compression": "^1.6.1",
     "connect-multiparty": "^2.0.0",
@@ -29,8 +31,5 @@
     "winston": "^2.1.1",
     "winston-daily-rotate-file": "^1.0.1"
   },
-  "devDependencies": {
-    "babel-core": "^6.5.2",
-    "babel-preset-es2015": "^6.5.0"
-  }
+  "devDependencies": {}
 }
