--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.11.2",
     "mongodb": "^2.1.7",
     "node-uuid": "^1.4.7",
+    "prerender-node": "^2.2.0",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.4.5",
     "winston": "^2.1.1",
