--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prerender-node": "^2.2.0",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.4.5",
+    "tingodb": "^0.4.2",
     "winston": "^2.2.0",
     "winston-daily-rotate-file": "^1.0.1"
   },
