--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
-    "presets": [
-        "es2015"
+    "presets": ["es2015", "stage-0"],
+    "plugins": [
+        "babel-plugin-transform-decorators-legacy"
     ]
 }
