--- a/package.json
+++ b/package.json
@@ -13,25 +13,27 @@
   "author": "Tony Jiang",
   "license": "MIT",
   "dependencies": {
-    "async": "^1.5.2",
-    "babel-core": "^6.9.0",
+    "babel-core": "^6.10.4",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
-    "body-parser": "^1.15.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "connect-multiparty": "^2.0.0",
     "cors": "^2.7.1",
-    "express": "^4.13.4",
+    "express": "^4.14.0",
     "express-session": "^1.13.0",
     "kerberos": "0.0.18",
     "moment": "^2.13.0",
-    "mongodb": "^2.1.19",
+    "mongodb": "^2.1.21",
     "node-uuid": "^1.4.7",
-    "prerender-node": "^2.2.2",
+    "prerender-node": "^2.3.0",
     "serve-favicon": "^2.3.0",
-    "socket.io": "^1.4.6",
+    "socket.io": "^1.4.8",
     "tingodb": "^0.4.2",
     "winston": "^2.2.0",
-    "winston-daily-rotate-file": "^1.1.0"
+    "winston-daily-rotate-file": "^1.1.4"
   },
   "devDependencies": {}
 }
