--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "es6-express-rest-api",
-  "version": "0.1.0",
+  "version": "0.5.0",
   "description": "This is for es6 rest api, use mongodb",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "dev": "cross-env NODE_ENV=development node -r babel-register index.js",
+    "prod": "cross-env node ./build/index.js",
+    "build": "NODE_ENV=production webpack -p --config webpack.server.prod.config.js"
   },
   "repository": {
     "type": "git",
@@ -13,27 +15,30 @@
   "author": "Tony Jiang",
   "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.11.4",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-0": "^6.5.0",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "connect-multiparty": "^2.0.0",
-    "cors": "^2.7.1",
+    "cors": "^2.8.1",
     "express": "^4.14.0",
-    "express-session": "^1.14.0",
+    "express-session": "^1.14.2",
     "kerberos": "0.0.18",
-    "moment": "^2.14.1",
-    "mongodb": "^2.2.4",
-    "node-uuid": "^1.4.7",
-    "prerender-node": "^2.3.0",
-    "serve-favicon": "^2.3.0",
-    "socket.io": "^1.4.8",
+    "moment": "^2.17.1",
+    "mongodb": "^2.2.15",
+    "prerender-node": "^2.5.0",
+    "socket.io": "^1.7.2",
+    "spdy": "^3.4.4",
     "tingodb": "^0.4.2",
-    "winston": "^2.2.0",
-    "winston-daily-rotate-file": "^1.1.5"
+    "winston": "^2.3.0",
+    "winston-daily-rotate-file": "^1.4.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-core": "^6.20.0",
+    "babel-loader": "^6.2.9",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "cross-env": "^3.1.3",
+    "webpack": "^1.14.0"
+  }
 }
