--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "compression": "^1.6.2",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "jsonwebtoken": "^7.2.1",
     "kerberos": "0.0.18",
     "moment": "^2.17.1",
     "mongodb": "^2.2.16",
+    "multiparty": "^4.1.2",
     "prerender-node": "^2.6.0",
     "socket.io": "^1.7.2",
     "spdy": "^3.4.4",
